--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="app">
         <h1>Shopping List</h1>
+        <button id="toggle-dark" class="toggle-btn"> Toggle Dark Mode</button>
         <form id="item-form">
             <input type="text" id="item-input" placeholder="Add and item" required />
             <button type="submit">Add</button>
